# eccli

./: Cargo.toml  LICENSE  README.md  candidates.json
.github/workflows/: ci.yml
src/: candidates.rs  cli.rs  client.rs  error.rs  lib.rs  main.rs  output.rs  time.rs
src/commands/: candidate.rs  election.rs  mod.rs  token.rs
tests/: cli_test.rs  json_contract.rs
tests/common/: mod.rs
