[package]
name = "eccli"
version = "0.1.0"
edition = "2021"
description = "Friendly command-line client for the Parallelia Electoral Commission (ec) daemon"
repository = "https://github.com/Parallelia/eccli"
license = "MIT"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.14"
serde_json = "1"
